RESOLVED FIXED11858
REGRESSION (r17597): Command-clicking a submit button does not submit in a new tab/window
https://bugs.webkit.org/show_bug.cgi?id=11858
Summary REGRESSION (r17597): Command-clicking a submit button does not submit in a ne...
mitz
Reported 2006-12-17 09:34:38 PST
Command-clicking a form's submit button behaves like a normal click and submits in the same frame instead of submitting in a new tab or window. To see this, open the URL and command-click the Submit button. See also bug 11628.
Attachments
mitz
Comment 1 2006-12-17 09:50:55 PST
See bug 3638 for a case where the expected behavior is for the modifier state to be ignored!
Darin Adler
Comment 2 2006-12-18 12:06:54 PST
I think I'll be able to fix this without re-breaking bug 3638.
Darin Adler
Comment 3 2006-12-18 13:07:14 PST
Just need to pass the correct underlying event in EventTargetNode::dispatchMouseEvent, which fixes this without breaking bug 3638. I still need layout tests for both bugs, and I really want to copy this one into Radar, but otherwise ready to go.
Darin Adler
Comment 4 2006-12-18 14:06:36 PST
<rdar://problem/4889565> REGRESSION (r17597): Command-clicking a submit button does not submit in a new tab/window
Darin Adler
Comment 5 2006-12-18 18:44:03 PST
Committed revision 18293.
Darin Adler
Comment 6 2007-01-15 14:47:30 PST
<rdar://problem/4889565> REGRESSION (r17597): Command-clicking a submit button does not submit in a new tab/window
Darin Adler
Comment 7 2007-01-15 14:47:55 PST
<rdar://problem/4860067> REGRESSION: Command-return no longer opens submitted form in new window (11858)
Note You need to log in before you can comment on or make changes to this bug.