WebCore/dom/Document.cpp
@@ -2256,9 +2256,12 @@ void Document::defaultEventHandler(Event *evt)
             if (elem) {
                 elem->accessKeyAction(false);
                 evt->setDefaultHandled();
+                return;
             }
         }
     }
+
+    ContainerNode::defaultEventHandler(evt);
 }
 
 void Document::setHTMLWindowEventListener(const AtomicString &eventType, PassRefPtr<EventListener> listener)
