WebCore/rendering/RenderSlider.cpp
@@ -41,6 +41,8 @@ namespace WebCore {
 using namespace EventNames;
 using namespace HTMLNames;
 
+const int defaultTrackLength = 129;
+
 class HTMLSliderThumbElement : public HTMLDivElement {
 public:
     HTMLSliderThumbElement(Document*, Node* shadowParent = 0);
@@ -66,45 +68,50 @@ HTMLSliderThumbElement::HTMLSliderThumbElement(Document* doc, Node* shadowParent
 {
 }
 
-
-void HTMLSliderThumbElement::defaultEventHandler(Event* evt)
+void HTMLSliderThumbElement::defaultEventHandler(Event* event)
 {
-    if (evt->type() == mousedownEvent) {
-        MouseEvent* mEvt = static_cast<MouseEvent*>(evt);
-        if (renderer() && renderer()->parent() && static_cast<RenderSlider*>(renderer()->parent())->mouseEventIsInThumb(mEvt)) {
+    const AtomicString& eventType = event->type();
+    if (eventType == mousedownEvent && event->isMouseEvent()) {
+        MouseEvent* mouseEvent = static_cast<MouseEvent*>(event);
+        if (document()->frame() && renderer() && renderer()->parent()
+                && static_cast<RenderSlider*>(renderer()->parent())->mouseEventIsInThumb(mouseEvent)) {
             // Cache the initial point where the mouse down occurred.
-            m_initialClickPoint = IntPoint(mEvt->x(), mEvt->y());
+            m_initialClickPoint = IntPoint(mouseEvent->x(), mouseEvent->y());
             // Cache the initial position of the thumb.
             m_initialPosition = static_cast<RenderSlider*>(renderer()->parent())->currentPosition();
             m_inDragMode = true;
             
             document()->frame()->eventHandler()->setCapturingMouseEventsNode(this);
             
-            evt->setDefaultHandled();
+            event->setDefaultHandled();
+            return;
         }
-    } else if (evt->type() == mouseupEvent) {
-        m_initialClickPoint = IntPoint();
-        m_initialPosition = 0;
-        document()->frame()->eventHandler()->setCapturingMouseEventsNode(0);      
-        m_inDragMode = false;
-        
-        evt->setDefaultHandled();
-    } else if (evt->type() == mousemoveEvent) {
+    } else if (eventType == mouseupEvent) {
+        if (m_inDragMode) {
+            if (Frame* frame = document()->frame())
+                frame->eventHandler()->setCapturingMouseEventsNode(0);      
+            m_inDragMode = false;
+            event->setDefaultHandled();
+            return;
+        }
+    } else if (eventType == mousemoveEvent && event->isMouseEvent()) {
         if (m_inDragMode && renderer() && renderer()->parent()) {
             // Move the slider
-            MouseEvent* mEvt = static_cast<MouseEvent*>(evt);
+            MouseEvent* mouseEvent = static_cast<MouseEvent*>(event);
             RenderSlider* slider = static_cast<RenderSlider*>(renderer()->parent());
-
-            int newPosition = slider->positionForOffset(IntPoint(m_initialPosition + mEvt->x() - m_initialClickPoint.x() + (renderer()->absoluteBoundingBoxRect().width() / 2), 
-                                                        m_initialPosition + mEvt->y() - m_initialClickPoint.y() + (renderer()->absoluteBoundingBoxRect().height() / 2)));
-            if (slider->currentPosition() != newPosition)
+            int newPosition = slider->positionForOffset(
+                IntPoint(m_initialPosition + mouseEvent->x() - m_initialClickPoint.x()
+                        + (renderer()->absoluteBoundingBoxRect().width() / 2), 
+                    m_initialPosition + mouseEvent->y() - m_initialClickPoint.y()
+                        + (renderer()->absoluteBoundingBoxRect().height() / 2)));
+            if (slider->currentPosition() != newPosition) {
                 slider->setCurrentPosition(newPosition);
-            
-            slider->valueChanged();
-            
-            evt->setDefaultHandled();
+                slider->valueChanged();
+            }
         }
     }
+
+    HTMLDivElement::defaultEventHandler(event);
 }
 
 RenderSlider::RenderSlider(HTMLInputElement* element)
@@ -123,8 +130,6 @@ short RenderSlider::baselinePosition(bool b, bool isRootLineBox) const
 {
     return height() + marginTop();
 }
-
-const int defaultTrackLength = 129;
 
 void RenderSlider::calcMinMaxWidth()
 {
@@ -270,7 +275,7 @@ void RenderSlider::setValueForPosition(int position)
 
     // Force integer value if not float.
     if (!equalIgnoringCase(precision, "float"))
-        val = (int)roundf(val);
+        val = lroundf(val);
 
     static_cast<HTMLInputElement*>(node())->setValueFromRenderer(String::number(val));
     
@@ -300,7 +305,7 @@ double RenderSlider::setPositionFromValue(bool inLayout)
         
     // Force integer value if not float.
     if (!equalIgnoringCase(precision, "float"))
-        val = (int)roundf(val);
+        val = lroundf(val);
 
     // Calculate the new position based on the value
     double factor = (val - minVal) / (maxVal - minVal);
@@ -372,7 +377,7 @@ int RenderSlider::trackSize()
 
 void RenderSlider::forwardEvent(Event* evt)
 {
-   m_thumb->defaultEventHandler(evt);
+    m_thumb->defaultEventHandler(evt);
 }
 
 bool RenderSlider::inDragMode() const
